--- a/index.html
+++ b/index.html
@@ -14,19 +14,53 @@
                     <a href="#">Частые вопросы</a>
                 </div>
                 <div class="nav-buttons">
-                    <img src="img/lupa.png" width="5%">
-                    <img src="img/lock.png" width="5%">
-                    <img src="img/login.png" width="5%">
+                    <img src="img/lupa.png" width="30px">
+                    <img src="img/lock.png" width="30px">
+                    <img src="img/login.png" width="30px">
                 </div>
             </nav>
         </header>
 
         <main>
-
+          <div class="logo">
+            <img src="img/logo-full-dark.svg" alt="Logo" width="500px">
+          </div>
+          <section class="benefits">
+              <div class="fast">
+                <h3>Быстро</h3>
+                <img src="img/Rectangle.svg">
+                <p>
+                  Мы делаем свою работу быстро!
+                  Два часа пролетят незаметно,
+                  и вы — счастливый обладатель стильной стрижки-минутки!
+                </p>
+              </div>
+              <div class="cool">
+                <h3>Круто</h3>
+                <img src="img/Rectangle.svg">
+                <p>
+                  Забудьте, как вы стриглись раньше.
+                  Мы сделаем из вас звезду футбола или кино!
+                  Во всяком случае внешне.
+                </p>
+              </div>
+              <div class="expensive">
+                <h3>Дорого</h3>
+                <img src="img/Rectangle.svg">
+                <p>
+                  Наши мастера — профессионалы своего дела и не могут стоить дешево.
+                  К тому же, разве цена не даёт определённый статус?
+                </p>
+              </div>
+          </section>
+          <section class="prices">
+          </section>
+          <section class="contacts">
+          </section>
         </main>
 
         <footer>
-            
+
         </footer>
     </body>
 </html>
