--- a/index.html
+++ b/index.html
@@ -53,9 +53,39 @@
                 </p>
               </div>
           </section>
-          <section class="prices">
+          <section class="prices_and_gallery">
+            <div class="prices">
+              <h3>Популярные услуги</h3>
+              <div class="line">
+                <span>Стрижка машинкой</span>
+                <div class="dots"></div>
+                <span>800  ₽</span>
+              </div>
+              <div class="line">
+                <span>Стрижка усов</span>
+                <div class="dots"></div>
+                <span>1200  ₽</span>
+              </div>
+              <div class="line">
+                <span>Груминг</span>
+                <div class="dots"></div>
+                <span>400  ₽</span>
+              </div>
+              <div class="line">
+                <span>Комплексная стрижка</span>
+                <div class="dots"></div>
+                <span>2300  ₽</span>
+              </div>
+            </div>
+            <div class="gallery">
+              <h3>Фотогалерея</h3>
+              <img src="img/chel.png" alt="foto chela" width="390" height="250">
+            </div>
           </section>
           <section class="contacts">
+            <div class="">
+
+            </div>
           </section>
         </main>
 
