added prices button

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                 <div class="dots"></div>
                 <span>2300  ₽</span>
               </div>
+              <button class="prices_button">Посмотреть все ></button>
             </div>
             <div class="gallery">
               <h3>Фотогалерея</h3>
