ended prices and gallery section, started contacts

--- a/index.html
+++ b/index.html
@@ -76,15 +76,38 @@
                 <div class="dots"></div>
                 <span>2300  ₽</span>
               </div>
-              <button class="prices_button">Посмотреть все ></button>
+              <button class="buttons prices_button">Посмотреть все ></button>
             </div>
+            <span class="dots_separator"></span>
             <div class="gallery">
               <h3>Фотогалерея</h3>
-              <img src="img/chel.png" alt="foto chela" width="390" height="250">
+              <div class="image_container">
+                <img src="img/chel.png" alt="foto chela" width="390" height="250">
+                <button class="gallery_button" value=">">></button>
+              </div>
+              <div class="dots_under_img">
+                <img src="img/blackdot.svg" alt="black dot" width="10">
+                <img src="img/greydot.svg" alt="grey dot" width="10">
+                <img src="img/greydot.svg" alt="grey dot" width="10">
+                <img src="img/greydot.svg" alt="grey dot" width="10">
+              </div>
             </div>
           </section>
-          <section class="contacts">
-            <div class="">
+          <section class="contacts_and_registration"> 
+            <div class="contacts">
+              <h3>Контакты</h3>
+              <div class="info">
+                <span class="contacts_header_span">Барбершоп "Бородинский"</span>
+                <span>Санкт-Петербург, набережная реки Карповки, 5, <br> литера П.</span>
+                <span style="text-decoration: underline;">+7 800 555-86-28</span>
+                <span class="contacts_header_span">Время работы</span>
+                <span>пн - пт: с 10:00 до 22:00</span>
+                <span>сб - вс: с 10:00 до 19:00</span>
+              </div>
+              <button class="buttons">Как проехать</button>
+              <button class="buttons">Обратная связь</button>
+            </div>
+            <div class="registration">
 
             </div>
           </section>
