add some styles

--- a/index.html
+++ b/index.html
@@ -104,11 +104,30 @@
                 <span>пн - пт: с 10:00 до 22:00</span>
                 <span>сб - вс: с 10:00 до 19:00</span>
               </div>
-              <button class="buttons">Как проехать</button>
-              <button class="buttons">Обратная связь</button>
+              <div class="contacts_buttons">
+                <button class="buttons">Как проехать</button>
+                <button class="buttons">Обратная связь</button>
+              </div>
             </div>
+            <span class="dots_separator"></span>
             <div class="registration">
-
+              <h3>Записаться</h3>
+              <span>Укажите желаемю дату и время и мы свяжемся с вами для 
+                    подтверждения брони
+              </span>
+              <div class="registration_form">
+                <form action="">
+                  <label for="date">ДАТА</label>
+                  <input class="registration_input" id="date" type="text" value="01.01.2022">
+                  <label for="time">ВРЕМЯ</label>
+                  <input class="registration_input" id="time" type="text" value="00:00">
+                  <label for="phone">ТЕЛЕФОН</label>
+                  <input class="registration_input" id="phone" type="text" value="+7 800 937-99-92">
+                  <label for="name">ИМЯ</label>
+                  <input class="registration_input" id="name" type="name">
+                  <input class="buttons" type="submit" name="register" value="Записаться">
+                </form>
+              </div>
             </div>
           </section>
         </main>
