--- a/index.html
+++ b/index.html
@@ -143,25 +143,32 @@
             </div>
           </section>
         </main>
-        <footer class="footer_bar">
-          <div class="footer_info">
-            <img src="img/footerlogo.svg" alt="footer logo" width="300">
-            <span>Санкт-Петербург, набережная <br> реки Карповки, 5, литера П.</span>
-            <span style="text-decoration: underline;">+ 7 800 555-86-28</span>
-            <span style="text-decoration: underline;">КАК НАС НАЙТИ?</span>
-          </div>
-          <div class="suggestions_and_questions">
-            <span>ПОЛУЧАЙТЕ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ</span>
-            <div>
-              <input type="text">
-              <button class="footer_button"></button>
-            </div>            
-          </div>
-          <div class="socials">
-            <span>ДАВАЙТЕ ДРУЖИТЬ</span>
-            <div>
-
+        <footer>
+          <div class="footer_container">
+            <div class="footer_info">
+              <img src="img/footerlogo.svg" alt="footer logo" width="300">
+              <span style="font-size: 14px">Санкт-Петербург, набережная <br> реки Карповки, 5, литера П.</span>
+              <span style="text-decoration: underline; font-size: 20px;">+ 7 800 555-86-28</span>
+              <span style="text-decoration: underline; font-size: 20px;">КАК НАС НАЙТИ?</span>
             </div>
+            <div class="suggestions_and_questions">
+              <span style="font-size: 20px;">ПОЛУЧАЙТЕ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ</span>
+              <div class="footer_input_container">
+                <input class="footer_input" type="text">
+                <div class="footer_button">
+                  <img src="img/footer_button.svg" alt="arrow">
+                </div>
+              </div>            
+            </div>
+            <div class="socials">
+              <span style="color: #fff;">ДАВАЙТЕ ДРУЖИТЬ</span>
+              <div class="socials_buttons">
+                <img src="img/twitter_button.svg" alt="twitter_button">
+                <img src="img/vk_button.svg" alt="vk_button">
+                <img src="img/inst_button.svg" alt="inst_button">
+              </div>
+            </div>
+  
           </div>
         </footer>
     </body>
